<resources>
    <string name="app_name">Movie MVI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recent">Recent</string>
    <string name="movie_plus">Movie Plus</string>
    <string name="popular">Popular</string>
    <string name="upcoming">Upcoming</string>
    <string name="feed">Feed</string>
    <string name="favourite">Favourite</string>
    <string name="account">Account</string>
    <string name="morbius">Morbius</string>
    <string name="crime_drama_thriller_fantasy">Crime, Drama, Thriller, Fantasy</string>
    <string name="overview">Dangerously ill with a rare blood disorder, and determined to save others suffering his same fate, Dr. Michael Morbius attempts a desperate gamble. What at first appears to be a radical success soon reveals itself to be a remedy potentially worse than the disease.</string>
    <string name="runtime">Runtime: 2h 20min</string>
    <string name="description">"Deep into a solo voyage in the Indian Ocean, an unnamed man (Redford) wakes to find his 39-foot yacht taking on water after a collision with a shipping container left floating on the high seas. With his navigation equipment and radio disabled, the man sails unknowingly into the path of a violent storm. Despite his success in patching the breached hull, his mariner's intuition and a strength that belies his age, the man barely survives the tempest. Using only a sextant and nautical maps to chart his progress, he is forced to rely on ocean currents to carry him into a shipping lane in hopes of hailing a passing vessel. But with the sun unrelenting, sharks circling and his meager supplies dwindling, the ever-resourceful sailor soon finds himself staring his mortality in the face."
       </string>
    <string name="_1976_01_24">1976-01-24</string>
</resources>