<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.HomeFragment">



   <androidx.core.widget.NestedScrollView
       android:layout_width="0dp"
       android:layout_height="0dp"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       >
       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent">
           <TextView
               android:id="@+id/recent_tv"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/recent"
               android:textColor="@color/black"
               android:textSize="18sp"
               android:textStyle="bold"
               app:layout_constraintHorizontal_bias="0.1"
               app:layout_constraintLeft_toLeftOf="parent"
               app:layout_constraintRight_toRightOf="parent"
               app:layout_constraintTop_toTopOf="parent"/>

           <androidx.recyclerview.widget.RecyclerView
               android:id="@+id/recent_rv"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="15dp"
               android:layout_marginTop="10dp"
               android:scrollbars="horizontal"
               app:layout_constraintLeft_toLeftOf="parent"
               app:layout_constraintRight_toRightOf="parent"
               app:layout_constraintTop_toBottomOf="@id/recent_tv"
               tools:listitem="@layout/recent_rv_item" />

           <TextView
               android:id="@+id/popular_tv"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/popular"
               android:textColor="@color/black"
               android:textSize="18sp"
               android:textStyle="bold"
               app:layout_constraintHorizontal_bias="0.1"
               app:layout_constraintLeft_toLeftOf="parent"
               app:layout_constraintRight_toRightOf="parent"
               app:layout_constraintTop_toBottomOf="@id/recent_rv"/>

           <androidx.recyclerview.widget.RecyclerView
               android:id="@+id/popular_rv"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="15dp"
               android:layout_marginTop="10dp"
               android:scrollbars="horizontal"
               app:layout_constraintLeft_toLeftOf="parent"
               app:layout_constraintRight_toRightOf="parent"
               app:layout_constraintTop_toBottomOf="@id/popular_tv"
               tools:listitem="@layout/recent_rv_item" />

           <TextView
               android:id="@+id/upcoming_tv"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/upcoming"
               android:textColor="@color/black"
               android:textSize="18sp"
               android:textStyle="bold"
               app:layout_constraintHorizontal_bias="0.1"
               app:layout_constraintLeft_toLeftOf="parent"
               app:layout_constraintRight_toRightOf="parent"
               app:layout_constraintTop_toBottomOf="@id/popular_rv"/>

           <androidx.recyclerview.widget.RecyclerView
               android:id="@+id/upcoming_rv"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="15dp"
               android:layout_marginTop="10dp"
               android:scrollbars="horizontal"
               app:layout_constraintLeft_toLeftOf="parent"
               app:layout_constraintRight_toRightOf="parent"
               app:layout_constraintTop_toBottomOf="@id/upcoming_tv"
               tools:listitem="@layout/recent_rv_item" />

       </androidx.constraintlayout.widget.ConstraintLayout>
   </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>