<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MovieFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/moview_image"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:scaleType="fitXY"
                android:src="@drawable/morbius"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="420dp"
                app:cardCornerRadius="40dp"
                app:cardElevation="0dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/movie_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:text="@string/morbius"
                        android:textColor="@color/black"
                        android:textSize="35sp"
                        android:textStyle="bold"
                        app:layout_constraintHorizontal_bias="0.1"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/movie_genre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/crime_drama_thriller_fantasy"
                        app:layout_constraintHorizontal_bias="0.1"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/movie_name" />

                    <TextView
                        android:id="@+id/movie_runtime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/runtime"
                        app:layout_constraintHorizontal_bias="0.1"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/movie_genre" />

                    <TextView
                        android:id="@+id/movie_release_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_1976_01_24"
                        app:layout_constraintHorizontal_bias="0.1"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/movie_runtime" />

                    <TextView
                        android:id="@+id/movie_popularity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_1976_01_24"
                        app:layout_constraintHorizontal_bias="0.1"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/movie_runtime" />

                    <TextView
                        android:id="@+id/movie_overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:text="@string/overview"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/movie_popularity" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/popular_rv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:scrollbars="horizontal"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/movie_overview"
                        tools:listitem="@layout/movie_image_items" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/ic_play"
                app:fabSize="auto"
                android:backgroundTint="@color/white"
                android:layout_marginTop="390dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <io.alterac.blurkit.BlurLayout
        android:id="@+id/blurLayout"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:clickable="true"
        android:focusable="true"
        app:blk_blurRadius="15"
        app:blk_cornerRadius="30dp"
        app:blk_downscaleFactor="0.12"
        app:blk_fps="60"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ticket_buy_btn"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/btn_background"
                android:text="Buy Ticket"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight_percent="0.55"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.5" />

            <androidx.cardview.widget.CardView
                android:layout_width="78dp"
                android:layout_height="78dp"
                android:backgroundTint="#FFF3A7"
                android:elevation="0dp"
                app:cardCornerRadius="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="9.1"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </io.alterac.blurkit.BlurLayout>

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/ic_baseline_keyboard_backspace_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03" />

    <ImageView
        android:id="@+id/save_btn"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/ic_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03" />


</androidx.constraintlayout.widget.ConstraintLayout>